; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/locks/extr_locks.c___netdata_mutex_init.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/locks/extr_locks.c___netdata_mutex_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [44 x i8] c"MUTEX_LOCK: failed to initialize (code %d).\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__netdata_mutex_init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @pthread_mutex_init(i32* %4, i32* null)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i64 @unlikely(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @error(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %12)
  br label %14

14:                                               ; preds = %11, %1
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @pthread_mutex_init(i32*, i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @error(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
